Fixed alignment issues with components in SideBar

--- a/src/components/cover/Cover.module.scss
+++ b/src/components/cover/Cover.module.scss
@@ -47,14 +47,17 @@
         height: 100vh;
         z-index: 1000 !important;
         .sideBarIcon {
+            position: relative;
             height: 25vh;
             background-color: white;
             .mainIcon {
                 width: 100%;
                 height: 100%;
+                background-position: center;
             }
         }
         .sideBarLinks {
+            position: relative;
             background-color:black;
             height: 5vh;
             display: flex;
@@ -62,8 +65,9 @@
             align-content: center;
             justify-content: space-between;
             vertical-align: middle;
-            padding-left: 10%;
-            padding-right: 14%;
+            padding-left: 15%;
+            padding-right: 15%;
+            z-index: 999 !important;
 
             .icon { 
                 align-self: center;
@@ -84,6 +88,7 @@
                 width: 100%;
                 height: 100%;
                 .selectionBox {
+                    margin-left: 8%;
                     display: grid;
                     // grid-template-columns: 2fr 0.1fr;
                     grid-column-gap: 10px;
